--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "element-plus": "^2.10.2",
     "pinia": "2.0.36",
     "pinia-plugin-persistedstate": "3.2.1",
+    "vant": "^4.9.20",
     "vue": "^3.4.21",
     "vue-i18n": "9.1.9",
     "wot-design-uni": "^1.9.1",
